# JEngine3D

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  ASAN.supp  CMakeLists.txt  CMakePresets.json  LSAN.supp  README.md  codecov.yml  imgui.ini  sonar-project.properties  valgrind.supp
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
CMake/: CRTarget.cmake  ClangRuntimeSanitizers.cmake  DisableStaticAnalysis.cmake  FontIconsTarget.cmake  ImGuiSoftwareRenderer.cmake  ImGuiTarget.cmake  STBTarget.cmake  SetupCatch2.cmake  StandardSetup.cmake  TracyServerTarget.cmake  Vendor.cmake
JEngine3D/: CMakeLists.txt  JEngine3D_Sources.cmake  main.cpp
JEngine3D/JEngine3D/Core/: Application.cpp  Application.hpp  Assert.hpp  AssetController.cpp  AssetController.hpp  Base.hpp  EntryPoint.cpp  EntryPoint.hpp  Events.hpp  ILayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiSupport.hpp  InputController.cpp  InputController.hpp  KeyCodes.hpp  LayerStack.cpp  LayerStack.hpp  LoggerController.cpp  LoggerController.hpp  Math.hpp  MemoryController.cpp  MemoryController.hpp  MouseButtons.hpp  PeriodicTimer.hpp  PluginController.cpp  PluginController.hpp  Types.hpp  WindowController.cpp  WindowController.hpp
JEngine3D/JEngine3D/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiSoftwareRenderer.cpp  ImGuiSoftwareRenderer.hpp  ImGuiSupport.hpp  Roboto-Regular.embed  SDL_Opengl_Reference_App.cpp  config.hpp
JEngine3D/JEngine3D/Debug/: NewOverride.cpp  NewOverrideDebug.cpp  NewOverrideDebug.hpp
JEngine3D/JEngine3D/Debug/View/: ApplicationDebugView.cpp  ApplicationDebugView.hpp  IImGuiDebugView.hpp  InputControllerDebugView.cpp  InputControllerDebugView.hpp  MemoryControllerDebugView.cpp  MemoryControllerDebugView.hpp  Renderer2DDebugView.cpp  Renderer2DDebugView.hpp  WindowControllerDebugView.cpp  WindowControllerDebugView.hpp
JEngine3D/JEngine3D/ECS/: Components.hpp  Entity.hpp
JEngine3D/JEngine3D/Event/: Events.hpp
JEngine3D/JEngine3D/Platform/: IGraphicsContext.cpp  IGraphicsContext.hpp  IGraphicsContextCreator.cpp  IGraphicsContextCreator.hpp  IPlatform.cpp  IPlatform.hpp  IPlatformBackend.cpp  IPlatformBackend.hpp  SDLPlatformBackend.cpp  SDLPlatformBackend.hpp
JEngine3D/JEngine3D/Platform/SDL/: SDLGLGraphicsContext.cpp  SDLGLGraphicsContext.hpp  SDLGLGraphicsContextCreator.cpp  SDLGLGraphicsContextCreator.hpp  SDLPlatform.cpp  SDLPlatform.hpp  SDLPlatformBackend.cpp  SDLPlatformBackend.hpp  SDLSoftwareGraphicsContext.cpp  SDLSoftwareGraphicsContext.hpp  SDLSoftwareGraphicsContextCreator.cpp  SDLSoftwareGraphicsContextCreator.hpp
JEngine3D/JEngine3D/Platform/SDL/OpenGL/: SDLGLGraphicsContext.cpp  SDLGLGraphicsContext.hpp  SDLGLGraphicsContextCreator.cpp  SDLGLGraphicsContextCreator.hpp
JEngine3D/JEngine3D/Platform/SDL/Software/: SDLSoftwareGraphicsContext.cpp  SDLSoftwareGraphicsContext.hpp  SDLSoftwareGraphicsContextCreator.hpp
JEngine3D/JEngine3D/Renderer/: IBuffer.hpp  IDrawTarget.hpp  IFramebuffer.hpp  IRendererAPI.hpp  IRendererAPICreator.cpp  IRendererAPICreator.hpp  IRendererObjectCreator.cpp  IRendererObjectCreator.hpp  IShader.hpp  ITexture.hpp  IVertexArray.hpp  Renderer2D.cpp  Renderer2D.hpp  SoftwareRasterizer.cpp  SoftwareRasterizer.hpp
JEngine3D/JEngine3D/Renderer/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.hpp  config.hpp
JEngine3D/JEngine3D/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLRendererObjectCreator.cpp  OpenGLRendererObjectCreator.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
JEngine3D/JEngine3D/Renderer/Software/: ISoftwareFrameBufferObject.hpp  ISoftwareShader.hpp  SoftwareBuffer.hpp  SoftwareFrameBufferObject.cpp  SoftwareFrameBufferObject.hpp  SoftwareRasterizer.cpp  SoftwareRasterizer.hpp  SoftwareRendererAPI.cpp  SoftwareRendererAPI.hpp  SoftwareRendererAPICreator.hpp  SoftwareRendererObjectCreator.hpp  SoftwareTexture.cpp  SoftwareTexture.hpp  SoftwareVertexArray.hpp
JEngine3D/JEngine3D/Utility/: ImageLoader.cpp  ImageLoader.hpp  Math.hpp  StringManipulation.hpp
JEngine3D/configured_files/: config.hpp.in
JEngine3D_Editor/: CMakeLists.txt  JEngine3D_Editor_Sources.cmake  TestLayer.cpp  TestLayer.hpp  UILayer.cpp  UILayer.hpp  main copy.cpp  main.cpp
JEngine3D_Editor/JEditor/: JEditorState.hpp  UILayer.cpp  UILayer.hpp  main.cpp  main.h
JEngine3D_Editor/JEditor/UI/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  IPanel.hpp
JEngine3D_Editor/assets/EditorUI/imgui/: default_layout.ini
JEngine3D_Editor/assets/imgui/: default_layout.ini
JEngine3D_Editor/configured_files/: CMakeLists.txt  config.hpp.in
configured_files/: config.hpp.in
fuzz_test/: fuzz_tester.cpp
src/: main.cpp
test/: CMakeLists.txt  tests.cpp
test/JEngine3D/: CMakeLists.txt  IntegrationTest_Sources.cmake  TestPlatformBackend.hpp  TestPlatformBackendFixture.hpp  UnitTest_Sources.cmake  constexpr_tests.cpp  tests.cpp
test/JEngine3D/UnitTests/: Base.cpp  Base_constexpr.cpp  Events.cpp  SDLPlatformBackend.cpp  TestPlatformBackend.hpp  Types.cpp  Types_constexpr.cpp  WindowController.cpp  unittest_SDLPlatformBackend.cpp
test/JEngine3D/UnitTests/Core/: Application.cpp  Base.cpp  Base_constexpr.cpp  Events.cpp  InputController.cpp  Layer.cpp  LayerStack.cpp  LoggerController.cpp  MemoryController.cpp  Types.cpp  Types_constexpr.cpp  WindowController.cpp
test/JEngine3D/UnitTests/Platform/: IPlatformBackend.cpp  SDLPlatformBackend.cpp
test/JEngine3D_Editor/: CMakeLists.txt  UnitTest_Sources.cmake  catch_main.cpp  constexpr_tests.cpp
test/TestBase/: TestPlatform.hpp  TestPlatformBackend.hpp  TestPlatformBackendFixture.hpp  TestPlatformFixture.hpp  TestPlatformGraphicsContext.hpp  TestPlatformGraphicsContextCreator.hpp  main.cpp
test/TestBase/Renderer/: TestBuffer.hpp  TestFramebuffer.hpp  TestRendererAPI.hpp  TestRendererObjectCreator.hpp  TestShader.hpp  TestTexture.hpp  (+1 more)
